# MasterPrompts

./: .cogneeignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  GEMINI.md  README.md  agents.yaml  diagramprompt.md  lefthook.yml  skills-lock.json
.agents/: GEMINI.md  agents.md
.agents/rules/: Architecture.md  GEMINI.md  ProjectTracking.md  Quality.md  SoftwareStandards.md  VisualArchitecture.md
.agents/skills/: GEMINI.md
.agents/workflows/: GEMINI.md
.beads/: issues.jsonl  metadata.json
.gemini/: settings.json
.gemini/agents/: GEMINI.md  api-specialist.md  arch-audit.md  auditor.md  backend.md  brain.md  builder.md  commander.md  context-agent.md  critique.md  devops.md  diagram-agent.md  doc-agent.md  docs.md  frontend.md  git.md  lead.md  lint-agent.md  lint.md  memory-manager.md  pm.md  qa.md  reviewer-agent.md  theme-expert.md  (+1 more)
BuildScripts/: build_morphic.py  install_morphic.py
IndexTest/Folder/web_calculator/sidecar/: pyproject.toml
IndexTest/Folder/web_calculator/sidecar/src/: api.py
IndexTest/Folder/web_calculator/sidecar/src/sidecar/: __init__.py
IndexTest/Folder/web_calculator/sidecar/tests/: test_calc.py
docs/: cognee_install.md  rules_imp.md  unification.md
scratch/: check_indexed_files.py  find_png_sizes.py
scripts/: GEMINI.md  build_morphic.py  cognee_indexer.py  cognee_memory.py  hal-sync.ps1  hal-sync.sh  install-framework.ps1  install.ps1  install.sh  install_morphic.py  intel_lock.py
test/: __init__.py  dashboard.html  dashboard2.html  simple_script.py  test_simple_script.py
tests/: test_indexer_ignore.py
(+333 files in other folders)
