[project]
name = "sidecar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "serguei9090", email = "serguei246@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
